--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
   "dependencies": {
     "vue": "^3.3.4",
 	"primevue": "^3.40",
-	"element-plus": "^2.4"
+	"element-plus": "^2.4",
+	"yup": "^1.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
