--- a/package.json
+++ b/package.json
@@ -63,5 +63,6 @@
 	"@typescript-eslint/parser": "^6.10",
 	"@typescript-eslint/eslint-plugin": "^6.10",
 	"@vue/eslint-config-typescript": "^12.0"
-  }
+  },
+  "license": "MIT"
 }
