--- a/package.json
+++ b/package.json
@@ -36,13 +36,11 @@
     "build": "npm run lint && vue-tsc && vite build",
 	"dev": "vite",
 	"lint": "eslint 'src/**/*.{ts,js,vue}' '*.{ts,js}' --no-fix",
-	"lint:fix": "eslint 'src/**/*.{ts,js,vue}' '*.{ts,js}' --fix"
+	"lint:fix": "eslint 'src/**/*.{ts,js,vue}' '*.{ts,js}' --fix",
+	"test": "echo \"No test specified\""
   },
   "dependencies": {
-    "vue": "^3.3.4",
-	"primevue": "^3.40",
-	"element-plus": "^2.4",
-	"yup": "^1.3"
+    "vue": "^3.3.4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
