--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-formify",
-  "private": true,
+  "private": false,
   "version": "0.0.1",
   "type": "module",
   "description": "Create forms without pain and more ease",
