--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": false,
   "version": "0.0.1",
   "type": "module",
+  "engines": {"node": "v18.16.0"},
   "description": "Create forms without pain and more ease",
   "keywords": [
     "vue",
