--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "vue-formify",
   "private": false,
-  "version": "0.0.1",
+  "version": "0.0.2",
   "type": "module",
-  "engines": {"node": "v18.16.0"},
+  "engines": {
+    "node": "v18.16.0"
+  },
   "description": "Create forms without pain and more ease",
   "keywords": [
     "vue",
