--- a/package.json
+++ b/package.json
@@ -64,5 +64,12 @@
     "@typescript-eslint/eslint-plugin": "^6.10",
     "@vue/eslint-config-typescript": "^12.0"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "repository": {
+	"type": "git",
+	"url": "git+https://github.com/mateenagy/vue-formify.git"
+  },
+  "bugs": {
+	"url": "https://github.com/mateenagy/vue-formify/issues"
+  }
 }
