--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "test": "npm run vitest"
   },
   "dependencies": {
-    "vue": "^3.3.4"
+    "vue": "^3.3.4",
+	"element-plus": "^2.4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
