feat: FormData, action, Checkbox & Radio component

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,7 @@
 
     /* Linting */
     "strict": true,
-    "noUnusedLocals": true,
+    "noUnusedLocals": false,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
   },
