--- a/.eslintrc
+++ b/.eslintrc
@@ -37,6 +37,7 @@
 			"allowArrowFunctions": true
 		}],
 		"@typescript-eslint/indent": ["error", "tab"],
+		"@typescript-eslint/no-unused-vars": "warn",
 		"key-spacing": ["error", {
 			"afterColon": true,
 			"mode": "minimum"
@@ -53,7 +54,7 @@
 		"one-var": ["error", "never"],
 		"no-console": 0,
 		"no-constant-condition": 0,
-		"no-unused-vars": 0,
+		"no-unused-vars": "warn",
 		"no-mixed-spaces-and-tabs": "error",
 		"no-multi-spaces": "error",
 		"no-multiple-empty-lines": ["error", {
