--- a/package.json
+++ b/package.json
@@ -67,7 +67,8 @@
     "eslint-plugin-prefer-arrow": "^1.2",
     "@typescript-eslint/parser": "^6.10",
     "@typescript-eslint/eslint-plugin": "^6.10",
-    "@vue/eslint-config-typescript": "^12.0"
+    "@vue/eslint-config-typescript": "^12.0",
+	"element-plus": "^2.4"
   },
   "license": "MIT",
   "repository": {
