--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "vue-formify",
 	"private": false,
-	"version": "0.0.28",
+	"version": "0.0.27",
 	"type": "module",
 	"engines": {
 		"node": "v20.12.1"
@@ -54,6 +54,7 @@
 		"vue-tsc": "^2.0",
 		"@vitejs/plugin-vue": "^5.0",
 		"rollup-plugin-typescript2": "^0.36",
+		"@rollup/plugin-typescript": "^11.1",
 		"vite-plugin-dts": "^3.8",
 		"unplugin-auto-import": "^0.17",
 		"typescript": "^5.4",
@@ -71,7 +72,11 @@
 		"@typescript-eslint/parser": "^7.5",
 		"@typescript-eslint/eslint-plugin": "^7.5",
 		"@vue/eslint-config-typescript": "^13.0",
-		"element-plus": "^2.6"
+		"element-plus": "^2.6",
+		"rollup": "^4.14",
+		"terser": "^5.30",
+		"@vue-formify/zod": "link:@vue-formify/zod",
+		"zod": "^3.22"
 	},
 	"license": "MIT",
 	"repository": {
