--- a/src/packages/zod/package.json
+++ b/src/packages/zod/package.json
@@ -1,20 +1,31 @@
 {
 	"name": "@vue-formify/zod",
 	"version": "0.0.27",
+	"private": false,
 	"description": "",
 	"engines": {
 		"node": "v20.12.1"
 	},
 	"main": "../../../dist/vue-formify-zod.umd.js",
 	"module": "../../../dist/vue-formify-zod.es.js",
-	"types": "../../../dist/index.d.ts",
+	"types": "../../../dist/packages/zod/index.d.ts",
 	"files": [
-		"dist/*.js",
-		"dist/*.d.ts"
+		"../../../dist/vue-formify-zod.es.js",
+		"../../../dist/vue-formify-zod.umd.js",
+		"../../../dist/packages/zod/index.d.ts"
 	],
 	"peerDependencies": {
 		"zod": "^3.22"
 	},
 	"author": "",
-	"license": "ISC"
+	"license": "MIT",
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/mateenagy/vue-formify.git",
+		"directory": "packages/zod"
+	},
+	"bugs": {
+		"url": "https://github.com/mateenagy/vue-formify/issues"
+	},
+	"homepage": "https://vue-formify.matenagy.me/"
 }
