--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,10 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
+  "include": [
+	"src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue",
+	"packages/**/*.ts", "packages/**/*.d.ts", "packages/**/*.tsx", "packages/**/*.vue",
+	"build.ts"
+  ],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
