--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
 	},
 	"scripts": {
 		"start": "vue-tsc && vite build --watch",
-		"build": "npm run lint && vue-tsc && vite build",
+		"build": "bun run lint && vue-tsc && vite build && bun build.ts",
 		"build:local": "vite build",
 		"dev": "vite",
 		"lint": "eslint 'src/**/*.{ts,js,vue}' '*.{ts,js}' --no-fix",
@@ -52,32 +52,33 @@
 		"vue": "^3"
 	},
 	"devDependencies": {
-		"vue": "^3.4",
-		"vite": "^5.2",
-		"vue-tsc": "^2.0",
-		"@vitejs/plugin-vue": "^5.0",
-		"rollup-plugin-typescript2": "^0.36",
-		"@rollup/plugin-typescript": "^11.1",
-		"vite-plugin-dts": "^3.8",
-		"unplugin-auto-import": "^0.17",
-		"typescript": "^5.4",
-		"@types/node": "^20.12",
-		"path": "^0.12",
-		"vitest": "^1.4",
-		"@vue/test-utils": "^2.4",
-		"@types/jsdom": "^21.1",
 		"@babel/types": "^7.24",
-		"jsdom": "^24.0",
+		"@rollup/plugin-typescript": "^11.1",
+		"@types/fs-extra": "^11.0.4",
+		"@types/jsdom": "^21.1",
+		"@types/node": "^20.12",
+		"@typescript-eslint/eslint-plugin": "^7.5",
+		"@typescript-eslint/parser": "^7.5",
+		"@vitejs/plugin-vue": "^5.0",
+		"@vue/eslint-config-typescript": "^13.0",
+		"@vue/test-utils": "^2.4",
+		"element-plus": "^2.6",
 		"eslint": "^8.57",
-		"eslint-plugin-vue": "^9.24",
 		"eslint-plugin-import": "^2.29",
 		"eslint-plugin-prefer-arrow": "^1.2",
-		"@typescript-eslint/parser": "^7.5",
-		"@typescript-eslint/eslint-plugin": "^7.5",
-		"@vue/eslint-config-typescript": "^13.0",
-		"element-plus": "^2.6",
+		"eslint-plugin-vue": "^9.24",
+		"jsdom": "^24.0",
+		"path": "^0.12",
 		"rollup": "^4.14",
+		"rollup-plugin-typescript2": "^0.36",
 		"terser": "^5.30",
+		"typescript": "^5.4",
+		"unplugin-auto-import": "^0.17",
+		"vite": "^5.2",
+		"vite-plugin-dts": "^3.8",
+		"vitest": "^1.4",
+		"vue": "^3.4",
+		"vue-tsc": "^2.0",
 		"zod": "^3.22"
 	},
 	"license": "MIT",
