--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
 	},
 	"scripts": {
 		"start": "vue-tsc && vite build --watch",
-		"build": "bun run lint && vue-tsc && vite build && bun build.ts",
+		"build": "bun run lint && vue-tsc && vite build",
+		"build:packages": "bun build.ts",
 		"build:local": "vite build",
 		"dev": "vite",
 		"lint": "eslint 'src/**/*.{ts,js,vue}' '*.{ts,js}' --no-fix",
@@ -71,6 +72,7 @@
 		"path": "^0.12",
 		"rollup": "^4.14",
 		"rollup-plugin-typescript2": "^0.36",
+		"rollup-plugin-dts": "^6.1",
 		"terser": "^5.30",
 		"typescript": "^5.4",
 		"unplugin-auto-import": "^0.17",
