--- a/packages/yup/package.json
+++ b/packages/yup/package.json
@@ -1,8 +1,37 @@
 {
-  "name": "@vue-formify/yup",
-  "version": "0.0.28",
-  "description": "",
-  "main": "index.js",
-  "author": "",
-  "license": "ISC"
+	"name": "@vue-formify/yup",
+	"version": "0.0.30",
+	"private": false,
+	"description": "Yup schema integration for vue-formify",
+	"engines": {
+		"node": "v20.12.1"
+	},
+	"keywords": [
+		"vue",
+		"vue3",
+		"validation",
+		"validator",
+		"form"
+	],
+	"type": "module",
+	"main": "dist/vue-formify-yup.umd.js",
+	"module": "dist/vue-formify-yup.es.js",
+	"types": "dist/packages/yup/index.d.ts",
+	"files": [
+		"dist"
+	],
+	"peerDependencies": {
+		"yup": "^1.4"
+	},
+	"author": "",
+	"license": "MIT",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/mateenagy/vue-formify.git",
+		"directory": "packages/yup"
+	},
+	"bugs": {
+		"url": "https://github.com/mateenagy/vue-formify/issues"
+	},
+	"homepage": "https://vue-formify.matenagy.me/"
 }
