--- a/packages/zod/package.json
+++ b/packages/zod/package.json
@@ -23,7 +23,7 @@
 	"peerDependencies": {
 		"zod": "^3"
 	},
-	"author": "",
+	"author": "Máté Nagy",
 	"license": "MIT",
 	"repository": {
 		"type": "git",
