--- a/package.json
+++ b/package.json
@@ -84,7 +84,8 @@
 		"zod": "^3.22",
 		"yup": "^1.4",
 		"valibot": "^0.30",
-		"primevue": "^3.51"
+		"primevue": "^3.51",
+		"@ionic/vue": "^7.8"
 	},
 	"license": "MIT",
 	"repository": {
