--- a/packages/resolvers/package.json
+++ b/packages/resolvers/package.json
@@ -1,34 +1,35 @@
 {
-	"name": "@vue-formify/ionic-vue",
+	"name": "@vue-formify/resolvers",
 	"version": "0.0.30",
 	"private": false,
-	"description": "Ionic Vue components integration for vue-formify",
+	"description": "Component resolvers for unplugin-vue-components",
 	"engines": {
 		"node": "v20.12.1"
 	},
 	"keywords": [
 		"vue",
 		"vue3",
-		"ionic",
-		"ui library",
-        "component library"
+		"resolvers",
+		"unplugin vue component",
+		"vueformify",
+		"form"
 	],
 	"type": "module",
-	"main": "dist/vue-formify-ionic-vue.umd.js",
-	"module": "dist/vue-formify-ionic-vue.es.js",
-	"types": "dist/packages/ionic-vue/index.d.ts",
+	"main": "dist/vue-formify-resolvers.umd.js",
+	"module": "dist/vue-formify-resolvers.es.js",
+	"types": "dist/packages/resolvers/index.d.ts",
 	"files": [
 		"dist"
 	],
 	"peerDependencies": {
-		"@ionic/vue": "^7.8"
+		"unplugin-vue-components": "^0.26"
 	},
 	"author": "Máté Nagy",
 	"license": "MIT",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/mateenagy/vue-formify.git",
-		"directory": "packages/ionic-vue"
+		"directory": "packages/resolvers"
 	},
 	"bugs": {
 		"url": "https://github.com/mateenagy/vue-formify/issues"
