--- a/packages/primevue/package.json
+++ b/packages/primevue/package.json
@@ -21,7 +21,8 @@
 		"dist"
 	],
 	"peerDependencies": {
-		"primevue": "^3.51"
+		"primevue": "^3.51",
+		"vue-formify": "^0.0.32"
 	},
 	"author": "Máté Nagy",
 	"license": "MIT",
