--- a/packages/element-plus/package.json
+++ b/packages/element-plus/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@vue-formify/element-plus",
-	"version": "0.0.32",
+	"version": "0.0.34",
 	"private": false,
 	"description": "Element Plus components integration for vue-formify",
 	"engines": {
@@ -21,7 +21,7 @@
 		"dist"
 	],
 	"peerDependencies": {
-		"element-plus": ""
+		"element-plus": "^2"
 	},
 	"author": "Máté Nagy",
 	"license": "MIT",
