--- a/packages/primevue/package.json
+++ b/packages/primevue/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@vue-formify/primevue",
-	"version": "0.0.32",
+	"version": "0.0.34",
 	"private": false,
 	"description": "PrimeVue components integration for vue-formify",
 	"engines": {
@@ -21,8 +21,7 @@
 		"dist"
 	],
 	"peerDependencies": {
-		"primevue": "^3.51",
-		"vue-formify": "^0.0.32"
+		"primevue": "^3"
 	},
 	"author": "Máté Nagy",
 	"license": "MIT",
