--- a/package.json
+++ b/package.json
@@ -54,8 +54,10 @@
 	},
 	"devDependencies": {
 		"@babel/types": "^7.24",
+		"@ionic/vue": "^7.8",
 		"@rollup/plugin-typescript": "^11.1",
 		"@types/fs-extra": "^11.0.4",
+		"@types/inquirer": "^9.0.7",
 		"@types/jsdom": "^21.1",
 		"@types/node": "^20.12",
 		"@typescript-eslint/eslint-plugin": "^7.5",
@@ -68,25 +70,25 @@
 		"eslint-plugin-import": "^2.29",
 		"eslint-plugin-prefer-arrow": "^1.2",
 		"eslint-plugin-vue": "^9.24",
+		"inquirer": "^9.2",
 		"jsdom": "^24.0",
 		"path": "^0.12",
+		"primevue": "^3.51",
 		"rollup": "^4.14",
-		"rollup-plugin-typescript2": "^0.36",
 		"rollup-plugin-dts": "^6.1",
+		"rollup-plugin-typescript2": "^0.36",
 		"terser": "^5.30",
 		"typescript": "^5.4",
 		"unplugin-auto-import": "^0.17",
 		"unplugin-vue-components": "^0.26",
+		"valibot": "^0.30",
 		"vite": "^5.2",
 		"vite-plugin-dts": "^3.8",
 		"vitest": "^1.4",
 		"vue": "^3.4",
 		"vue-tsc": "^2.0",
-		"zod": "^3.22",
 		"yup": "^1.4",
-		"valibot": "^0.30",
-		"primevue": "^3.51",
-		"@ionic/vue": "^7.8"
+		"zod": "^3.22"
 	},
 	"license": "MIT",
 	"repository": {
