--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,11 @@
 	"declaration": true,
     "outDir": "dist",
     "declarationDir": "dist",
+	"types": [
+		"node",
+		"vite/client",
+		"element-plus/global"
+	],
     "baseUrl": ".",
     "paths": {
       "@/*": [
@@ -31,7 +36,7 @@
   },
   "include": [
 	"src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue",
-	// "packages/**/*.ts", "packages/**/*.d.ts", "packages/**/*.tsx", "packages/**/*.vue, packages/**/**/*.ts", "packages/**/**/*.d.ts",
+	"packages/**/*.ts", "packages/**/*.d.ts", "packages/**/*.tsx", "packages/**/*.vue, packages/**/**/*.ts", "packages/**/**/*.d.ts",
 	"build.ts"
   ],
   "references": [{ "path": "./tsconfig.node.json" }]
