add: joi schema integration

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"build": "bun run lint && vue-tsc && vite build",
 		"build:packages": "bun run lint && bun run vue-tsc && bun build.ts",
 		"build:local": "vite build",
+		"publish": "bun run build && bun run vitest && np",
 		"dev": "vite",
 		"lint": "eslint 'src/**/*.{ts,js,vue}' '*.{ts,js}' --no-fix",
 		"lint:fix": "eslint 'src/**/*.{ts,js,vue}' '*.{ts,js}' --fix",
@@ -80,7 +81,7 @@
 		"terser": "^5.30",
 		"typescript": "^5.4",
 		"unplugin-auto-import": "^0.17",
-		"unplugin-vue-components": "^0.26",
+		"unplugin-vue-components": "^0.27",
 		"valibot": "^0.30",
 		"vite": "^5.2",
 		"vite-plugin-dts": "^3.8",
@@ -91,7 +92,7 @@
 		"zod": "^3.22",
 		"radix-vue": "^1.7",
 		"@internationalized/date": "^3.5",
-		"vue-formify": "^0.0.35",
+		"vue-formify": "^0.0.39",
 		"unplugin-element-plus": "^0.8"
 	},
 	"license": "MIT",
