--- a/package.json
+++ b/package.json
@@ -55,42 +55,43 @@
 	},
 	"devDependencies": {
 		"@babel/types": "^7.24",
-		"@ionic/vue": "^7.8",
+		"@ionic/vue": "^8.2",
 		"@rollup/plugin-typescript": "^11.1",
-		"@types/fs-extra": "^11.0.4",
-		"@types/inquirer": "^9.0.7",
+		"@types/fs-extra": "^11.0",
+		"@types/inquirer": "^9.0",
 		"@types/jsdom": "^21.1",
-		"@types/node": "^20.12",
-		"@typescript-eslint/eslint-plugin": "^7.5",
-		"@typescript-eslint/parser": "^7.5",
-		"@vitejs/plugin-vue": "^5.0",
+		"@types/node": "^20.14",
+		"@typescript-eslint/eslint-plugin": "^7.17",
+		"@typescript-eslint/parser": "^7.17",
+		"@vitejs/plugin-vue": "^5.1",
 		"@vue/eslint-config-typescript": "^13.0",
 		"@vue/test-utils": "^2.4",
+		"typescript-eslint": "^7.17",
 		"element-plus": "^2.7",
-		"eslint": "^8.57",
+		"eslint": "^9.7",
 		"eslint-plugin-import": "^2.29",
 		"eslint-plugin-prefer-arrow": "^1.2",
-		"eslint-plugin-vue": "^9.24",
-		"inquirer": "^9.2",
-		"jsdom": "^24.0",
+		"eslint-plugin-vue": "^9.27",
+		"inquirer": "^10.1",
+		"jsdom": "^24.1",
 		"path": "^0.12",
 		"primevue": "^3.51",
-		"rollup": "^4.14",
+		"rollup": "^4.19",
 		"rollup-plugin-dts": "^6.1",
 		"rollup-plugin-typescript2": "^0.36",
-		"terser": "^5.30",
-		"typescript": "^5.4",
-		"unplugin-auto-import": "^0.17",
+		"terser": "^5.31",
+		"typescript": "^5.5",
+		"unplugin-auto-import": "^0.18",
 		"unplugin-vue-components": "^0.27",
-		"valibot": "^0.30",
-		"vite": "^5.2",
+		"valibot": "^0.36",
+		"vite": "^5.3",
 		"vite-plugin-dts": "^3.8",
-		"vitest": "^1.4",
+		"vitest": "^2.0",
 		"vue": "^3.4",
 		"vue-tsc": "^2.0",
 		"yup": "^1.4",
-		"zod": "^3.22",
-		"radix-vue": "^1.7",
+		"zod": "^3.23",
+		"radix-vue": "^1.9",
 		"@internationalized/date": "^3.5",
 		"vue-formify": "^0.0.39",
 		"unplugin-element-plus": "^0.8"
