fix: package versions

--- a/package.json
+++ b/package.json
@@ -61,15 +61,13 @@
 		"@types/inquirer": "^9.0",
 		"@types/jsdom": "^21.1",
 		"@types/node": "^20.14",
-		"@typescript-eslint/eslint-plugin": "^7.17",
-		"@typescript-eslint/parser": "^7.17",
+		"@typescript-eslint/eslint-plugin": "^8.0",
+		"@typescript-eslint/parser": "8.0",
 		"@vitejs/plugin-vue": "^5.1",
-		"@vue/eslint-config-typescript": "^13.0",
 		"@vue/test-utils": "^2.4",
-		"typescript-eslint": "^7.17",
+		"typescript-eslint": "^8.0",
 		"element-plus": "^2.7",
-		"eslint": "^9.7",
-		"eslint-plugin-import": "^2.29",
+		"eslint": "^9.8",
 		"eslint-plugin-prefer-arrow": "^1.2",
 		"eslint-plugin-vue": "^9.27",
 		"inquirer": "^10.1",
