--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
 		"packages/*"
 	],
 	"description": "Unleash Form-Building Freedom! 🚀",
+	"sideEffects": false,
 	"keywords": [
 		"vue",
+		"vue3",
 		"form",
 		"forms",
 		"formify",
@@ -60,9 +62,9 @@
 		"@types/fs-extra": "^11.0",
 		"@types/inquirer": "^9.0",
 		"@types/jsdom": "^21.1",
-		"@types/node": "^20.14",
+		"@types/node": "^22.5",
 		"@typescript-eslint/eslint-plugin": "^8.0",
-		"@typescript-eslint/parser": "8.0",
+		"@typescript-eslint/parser": "^8.3",
 		"@vitejs/plugin-vue": "^5.1",
 		"@vue/test-utils": "^2.4",
 		"typescript-eslint": "^8.0",
@@ -71,7 +73,7 @@
 		"eslint-plugin-prefer-arrow": "^1.2",
 		"eslint-plugin-vue": "^9.27",
 		"inquirer": "^10.1",
-		"jsdom": "^24.1",
+		"jsdom": "^25.0",
 		"path": "^0.12",
 		"primevue": "^3.51",
 		"rollup": "^4.19",
@@ -83,7 +85,8 @@
 		"unplugin-vue-components": "^0.27",
 		"valibot": "^0.36",
 		"vite": "^5.3",
-		"vite-plugin-dts": "^3.8",
+		"vite-plugin-dts": "^4.0",
+		"ajv": "^8.17",
 		"vitest": "^2.0",
 		"vue": "^3.4",
 		"vue-tsc": "^2.0",
