add: type-safe forms | rewrite: tests, Field, FieldArray, Form, Error components

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -38,7 +38,7 @@
 	"src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue",
   ],
   "exclude": [
-	"node_modules"
+	"node_modules",
   ],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
