wip: better logic for states but multiple rerender on Field component

--- a/package.json
+++ b/package.json
@@ -75,7 +75,8 @@
 		"inquirer": "^10.1",
 		"jsdom": "^25.0",
 		"path": "^0.12",
-		"primevue": "^3.0",
+		"primevue": "^4.0",
+		"@primevue/themes": "^4.0",
 		"rollup": "^4.19",
 		"rollup-plugin-dts": "^6.1",
 		"rollup-plugin-typescript2": "^0.36",
