--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -4,11 +4,11 @@
     "skipLibCheck": true,
     "module": "ESNext",
     "moduleResolution": "bundler",
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
   },
   "include": [
 	"vite.config.ts",
 	"build.ts",
-	"packages/**/*.ts", "packages/**/*.d.ts", "packages/**/*.tsx", "packages/**/*.vue, packages/**/**/*.ts", "packages/**/**/*.d.ts",
+	"packages/**/*.ts", "packages/**/*.d.ts", "packages/**/*.tsx", "packages/**/*.vue", "packages/**/**/*.ts", "packages/**/**/*.d.ts",
    ]
 }
