rewrite: Error logic, Error component, yup, valibot

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -5,6 +5,14 @@
     "module": "ESNext",
     "moduleResolution": "bundler",
     "allowSyntheticDefaultImports": true,
+	"paths": {
+      "@/*": [
+        "./src/*"
+      ],
+      "@packages/*": [
+        "./packages/*"
+      ]
+    },
   },
   "include": [
 	"vite.config.ts",
