--- a/package.json
+++ b/package.json
@@ -84,7 +84,7 @@
 		"rollup-plugin-dts": "^6.1",
 		"rollup-plugin-typescript2": "^0.36",
 		"terser": "^5.31",
-		"typescript": "^5.6",
+		"typescript": "5.6",
 		"unplugin-auto-import": "^0.18",
 		"unplugin-vue-components": "^0.27",
 		"valibot": "^0.42",
@@ -98,7 +98,7 @@
 		"zod": "^3.23",
 		"radix-vue": "^1.9",
 		"@internationalized/date": "^3.5",
-		"vue-formify": "1.1",
+		"vue-formify": "link:vue-formify",
 		"unplugin-element-plus": "^0.8",
 		"oxlint": "^0.10"
 	},
