--- a/tsconfig.json
+++ b/tsconfig.json
@@ -38,7 +38,12 @@
     "noFallthroughCasesInSwitch": true,
   },
   "include": [
-	"src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue", "playground/**/*.vue", "playground/**/*.ts",
+	"src/**/*.ts",
+	"src/**/*.d.ts",
+	"src/**/*.tsx",
+	"src/**/*.vue",
+	"playground/**/*.vue",
+	"playground/**/*.ts",
   ],
   "exclude": [
 	"node_modules",
