--- a/package.json
+++ b/package.json
@@ -98,7 +98,7 @@
 		"zod": "^3.23",
 		"radix-vue": "^1.9",
 		"@internationalized/date": "^3.5",
-		"vue-formify": "link:vue-formify",
+		"vue-formify": "^1.2.7",
 		"unplugin-element-plus": "^0.8",
 		"oxlint": "^0.10"
 	},
