--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -17,6 +17,12 @@
   "include": [
 	"vite.config.ts",
 	"build.ts",
+	"src/**/*.ts",
+	"src/**/*.d.ts",
+	"src/**/*.tsx",
+	"src/**/*.vue",
+	"playground/**/*.vue",
+	"playground/**/*.ts",
 	"packages/**/*.ts", "packages/**/*.d.ts", "packages/**/*.tsx", "packages/**/*.vue", "packages/**/**/*.ts", "packages/**/**/*.d.ts",
    ]
 }
