--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,7 +37,18 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
   },
-  "include": [],
+  "include": [
+	"src/**/*.ts",
+	"src/**/*.d.ts",
+	"src/**/*.tsx",
+	"src/**/*.vue",
+	"packages/**/*.ts",
+	"packages/**/*.d.ts",
+	"packages/**/*.tsx",
+	"packages/**/*.vue",
+	"packages/**/**/*.ts",
+	"packages/**/**/*.d.ts",
+  ],
   "exclude": [
 	"node_modules",
   ],
