fix: better GetKeys extraction, Field component array default, Form initial values to Partial, better initial value setter

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -48,6 +48,8 @@
 	"packages/**/*.vue",
 	"packages/**/**/*.ts",
 	"packages/**/**/*.d.ts",
+	"playground/**/*.vue",
+	"playground/**/*.ts",
   ],
   "exclude": [
 	"node_modules",
