--- a/tsconfig.json
+++ b/tsconfig.json
@@ -42,12 +42,12 @@
 	"src/**/*.d.ts",
 	"src/**/*.tsx",
 	"src/**/*.vue",
-	"packages/**/*.ts",
-	"packages/**/*.d.ts",
-	"packages/**/*.tsx",
-	"packages/**/*.vue",
-	"packages/**/**/*.ts",
-	"packages/**/**/*.d.ts",
+	// "packages/**/*.ts",
+	// "packages/**/*.d.ts",
+	// "packages/**/*.tsx",
+	// "packages/**/*.vue",
+	// "packages/**/**/*.ts",
+	// "packages/**/**/*.d.ts",
 	"playground/**/*.vue",
 	"playground/**/*.ts",
   ],
