--- a/package.json
+++ b/package.json
@@ -88,8 +88,8 @@
 		"unplugin-auto-import": "^0.18",
 		"unplugin-vue-components": "^0.27",
 		"valibot": "^0.42",
-		"vite": "^5.3",
-		"vite-plugin-dts": "^4.0",
+		"vite": "5.3",
+		"vite-plugin-dts": "4.0",
 		"ajv": "^8.17",
 		"vitest": "^2.0",
 		"vue": "^3.5",
