--- a/package.json
+++ b/package.json
@@ -31,9 +31,9 @@
 	"types": "./dist/index.d.ts",
 	"exports": {
 		".": {
+			"types": "./dist/index.d.ts",
 			"import": "./dist/vue-formify.es.js",
-			"require": "./dist/vue-formify.umd.js",
-			"types": "./dist/index.d.ts"
+			"require": "./dist/vue-formify.umd.js"
 		},
 		"./dist/vue-formify.css": {
 			"import": "./dist/vue-formify.css",
@@ -61,7 +61,7 @@
 	"devDependencies": {
 		"@babel/types": "^7.24",
 		"@ionic/vue": "^8.2",
-		"@rollup/plugin-typescript": "^11.1",
+		"@rollup/plugin-typescript": "^12.1",
 		"@types/fs-extra": "^11.0",
 		"@types/inquirer": "^9.0",
 		"@types/jsdom": "^21.1",
@@ -74,9 +74,9 @@
 		"element-plus": "^2.7",
 		"eslint": "^9.8",
 		"eslint-plugin-prefer-arrow": "^1.2",
-		"eslint-plugin-vue": "^9.27",
-		"inquirer": "^10.1",
-		"jsdom": "^25.0",
+		"eslint-plugin-vue": "^10.0",
+		"inquirer": "^12.5",
+		"jsdom": "^26.1",
 		"path": "^0.12",
 		"primevue": "^4.0",
 		"@primevue/themes": "^4.0",
@@ -84,23 +84,19 @@
 		"rollup-plugin-dts": "^6.1",
 		"rollup-plugin-typescript2": "^0.36",
 		"terser": "^5.31",
-		"typescript": "5.6",
-		"unplugin-auto-import": "^0.18",
-		"unplugin-vue-components": "^0.27",
-		"valibot": "^0.42",
-		"vite": "5.3",
+		"typescript": "^5.8",
+		"valibot": "^1.0",
+		"vite": "^6.3",
 		"vite-plugin-dts": "4.0",
-		"ajv": "^8.17",
-		"vitest": "^2.0",
+		"vitest": "^3.1",
 		"vue": "^3.5",
 		"vue-tsc": "^2.1",
 		"yup": "^1.4",
 		"zod": "^3.23",
 		"radix-vue": "^1.9",
-		"@internationalized/date": "^3.5",
 		"vue-formify": "^1.2.7",
-		"unplugin-element-plus": "^0.8",
-		"oxlint": "^0.10"
+		"oxlint": "^0.16",
+		"ajv": "^8.17"
 	},
 	"license": "MIT",
 	"repository": {
