--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
 		"publish": "bun run build && bun run vitest && np",
 		"dev": "vite",
 		"lint": "eslint 'src/**/*.{ts,js,vue}' '*.{ts,js}' --no-fix",
-		"oxl:lint": "oxlint all ./src ./packages",
+		"oxl:lint": "oxlint ./src",
 		"lint:fix": "eslint 'src/**/*.{ts,js,vue}' '*.{ts,js}' --fix",
 		"lint:tsc": "vue-tsc --noEmit -p tsconfig.json ",
 		"vitest": "vitest --environment jsdom run",
