--- a/package.json
+++ b/package.json
@@ -71,7 +71,6 @@
 		"@vitejs/plugin-vue": "^5.1",
 		"@vue/test-utils": "^2.4",
 		"typescript-eslint": "^8.0",
-		"element-plus": "^2.7",
 		"eslint": "^9.8",
 		"eslint-plugin-prefer-arrow": "^1.2",
 		"eslint-plugin-vue": "^10.0",
@@ -94,10 +93,10 @@
 		"yup": "^1.4",
 		"zod": "^3.23",
 		"arktype": "^2.1",
-		"radix-vue": "^1.9",
-		"vue-formify": "^1.2.7",
 		"oxlint": "^0.16",
-		"ajv": "^8.17"
+		"ajv": "^8.17",
+		"unocss": "^66.1",
+		"unocss-preset-grid": "^1.6"
 	},
 	"license": "MIT",
 	"repository": {
