--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
 		"@typescript-eslint/eslint-plugin": "^8.0",
 		"@typescript-eslint/parser": "^8.3",
 		"@vitejs/plugin-vue": "^5.1",
+		"vite-plugin-vue-devtools": "^7.7",
 		"@vue/test-utils": "^2.4",
 		"typescript-eslint": "^8.0",
 		"eslint": "^9.8",
