update: docs, types, options

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -48,6 +48,7 @@
 "exclude": [
 	"node_modules",
 	"docs/**/*.css",
+	"docs/**/*.vue",
   ],
   
   "references": [{ "path": "./tsconfig.node.json" }]
