--- a/docs/package.json
+++ b/docs/package.json
@@ -1,19 +1,29 @@
 {
+	"type": "module",
     "scripts": {
         "docs:dev": "vitepress dev",
         "docs:build": "vitepress build",
         "docs:preview": "vitepress preview"
     },
+    "dependencies": {
+        "@primeuix/themes": "^1.1.1",
+        "primevue": "^4.3.4",
+        "vue-formify": "2.0.0-0",
+		"unocss": "^66.1",
+		"unocss-preset-grid": "^1.6",
+		"@vue/repl": "^4.5",
+		"vitepress-plugin-group-icons": "^1.5"
+    },
     "devDependencies": {
         "vitepress": "^1.3"
     },
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/mateenagy/vue-formify.git"
-	},
-	"bugs": {
-		"url": "https://github.com/mateenagy/vue-formify/issues"
-	},
-	"homepage": "https://vue-formify.matenagy.me/",
-	"author": "Máté Nagy"
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/mateenagy/vue-formify.git"
+    },
+    "bugs": {
+        "url": "https://github.com/mateenagy/vue-formify/issues"
+    },
+    "homepage": "https://vue-formify.matenagy.me/",
+    "author": "Máté Nagy"
 }
