--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "vue-formify",
 	"private": false,
-	"version": "2.0.0-1",
+	"version": "2.0.0",
 	"type": "module",
 	"engines": {
 		"node": "v20.12.1"
