--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 	"scripts": {
 		"start": "vue-tsc && vite build --watch",
 		"build": "bun run vitest && bun run oxl:lint && vue-tsc && vite build",
+		"build:rd": "bun run rolldown -c rolldown.config.ts",
 		"build:packages": "bun run oxl:lint && bun run vue-tsc && bun build.ts",
 		"build:local": "vite build",
 		"publish": "bun run build && bun run vitest && np",
@@ -92,7 +93,9 @@
 		"arktype": "^2.1",
 		"oxlint": "^0.16",
 		"ajv": "^8.17",
-		"unocss": "^66.1"
+		"unocss": "^66.1",
+		"rolldown": "1.0.0-beta.18",
+		"rolldown-plugin-dts": "^0.13.11"
 	},
 	"license": "MIT",
 	"repository": {
