--- a/tsconfig.json
+++ b/tsconfig.json
@@ -48,7 +48,7 @@
 "exclude": [
 	"node_modules",
 	"docs/**/*.css",
-	"docs/**/*.vue",
+	// "docs/**/*.vue",
   ],
   
   "references": [{ "path": "./tsconfig.node.json" }]
