--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
 	"scripts": {
 		"start": "vue-tsc && vite build --watch",
 		"build": "bun run vitest && bun run oxl:lint && vue-tsc && vite build",
-		"build:rd": "bun run rolldown -c rolldown.config.ts",
+		"build:rd": "bun run vitest && bun run oxl:lint && vue-tsc && bun run rolldown -c rolldown.config.ts",
+		"build:r": "bun buildRD.ts && zip -c distRolldown/*.js | wc -c",
 		"build:packages": "bun run oxl:lint && bun run vue-tsc && bun build.ts",
 		"build:local": "vite build",
 		"publish": "bun run build && bun run vitest && np",
@@ -83,8 +84,8 @@
 		"terser": "^5.31",
 		"typescript": "^5.8",
 		"valibot": "^1.0",
-		"vite": "^6.3",
-		"vite-plugin-dts": "4.0",
+		"vite": "npm:rolldown-vite@latest",
+		"vite-plugin-dts": "^4.5",
 		"vitest": "^3.1",
 		"vue": "^3.5",
 		"vue-tsc": "^2.1",
@@ -95,7 +96,11 @@
 		"ajv": "^8.17",
 		"unocss": "^66.1",
 		"rolldown": "1.0.0-beta.18",
-		"rolldown-plugin-dts": "^0.13.11"
+		"rollup-plugin-swc3": "^0.12",
+		"rolldown-plugin-dts": "^0.13"
+	},
+	"resolutions": {
+		"typescript": "5.8.3"
 	},
 	"license": "MIT",
 	"repository": {
